--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListAll.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListAll.cshtml
@@ -28,15 +28,18 @@
             </td>
             <td>
                 <a asp-action="Details" asp-route-id="@image.Id">Details</a>
-
-                @if (ViewBag.UserName.Equals(image.User.UserName))
-                {
-                    <text>
-                        <!-- TODO add Edit and Delete links -->
-
-                    </text>
-                }
             </td>
+
+            @if (ViewBag.UserName.Equals(image.User.UserName))
+            {
+                <!-- TODO-DONE add Edit and Delete links -->
+                <td>
+                    <a asp-action="Edit" asp-route-id="@image.Id">Edit</a>
+                </td>
+                <td>
+                    <a asp-action="Delete" asp-route-id="@image.Id">Delete</a>
+                </td>
+            }
         </tr>
     }
 </table>
