--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListByUser.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListByUser.cshtml
@@ -11,8 +11,11 @@
     <fieldset>
         <legend>Choose a user</legend>
         <p>
-            <!-- TODO select user from a drop-down menu -->
-            User: 
+            <!-- TODO-DONE select user from a drop-down menu -->
+            User:
+            <select asp-for="Id" asp-items="Model.Users">
+                <option disabled selected value="">Select a User</option>
+            </select>
 
         </p>
         <p>
