--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Shared/Layout.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Shared/Layout.cshtml
@@ -9,7 +9,7 @@
     <title> @ViewBag.Title </title>
 
     @{
-        var SiteCss = ViewBag.isAda ? "site_ADA.css" : "site.css";
+        var SiteCss = ViewBag.isADA ? "site_ADA.css" : "site.css";
     }
 
     <link rel="stylesheet" href="~/css/@SiteCss" type="text/css" asp-append-version="true" />
