--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Login.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Login.cshtml
@@ -6,25 +6,28 @@
 
 @model  ImageSharingWithCloudStorage.Models.LoginModel
 
-<form method="post" asp-action="Login" asp-controller="Account">
+<form class="form-group" method="post" asp-action="Login" asp-controller="Account">
 
     <fieldset>
         <legend>Enter Your Email and Password:</legend>
         <p>
-            @if (ViewBag.ReturnUrl != null) { 
+            @if (ViewBag.ReturnUrl != null)
+            {
                 <input type="hidden" name="ReturnUrl" id="ReturnUrl" value="@ViewBag.ReturnUrl"/>
             }
-            Email: <input asp-for="UserName" /><span asp-validation-for="UserName" />
+            Email: <label asp-for="UserName"/><input id="UserName" asp-for="UserName"/><span class="text-danger" asp-validation-for="UserName"></span>
         </p>
         <p>
-            Password: <input asp-for="Password" /><span asp-validation-for="Password" />
+            Password: <label asp-for="Password"/><input asp-for="Password"/><span class="text-danger" asp-validation-for="Password"></span>
         </p>
         <p>
-            <input type="submit" value="Login" />
+            <input type="submit" value="Login"/>
         </p>
     </fieldset>
 
     <p>@ViewBag.Message</p>
-    <p><div class="text-danger" asp-validation-summary="ModelOnly"></div></p>
+    <p>
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+    </p>
 
 </form>
