--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Manage.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Manage.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<form method="post" asp-action="Manage" asp-controller="Account">
+<form class="form-group" method="post" asp-action="Manage" asp-controller="Account">
 
     <fieldset>
         <legend>Deactivate/Reactivate Users</legend>
