--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Password.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Password.cshtml
@@ -4,9 +4,9 @@
 
 <h2>@ViewBag.Title</h2>
 
-@model  ImageSharingWithCloudStorage.Models.LocalPasswordModel
+@model ImageSharingWithCloudStorage.Models.LocalPasswordModel
 
-<form method="post" asp-action="Password" asp-controller="Account">
+<form class="form-group" method="post" asp-action="Password" asp-controller="Account">
 
     <fieldset>
         <legend>Update Your Password</legend>
@@ -31,6 +31,6 @@
     </fieldset>
 
     <p>@ViewBag.Message</p>
-    <p><div class="text-danger" asp-validation-summary="ModelOnly"></div></p>
+    <p><div class="text-danger" asp-validation-summary="All"></div></p>
 
 </form>
