--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Register.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 
 @model ImageSharingWithCloudStorage.Models.RegisterModel
 
-<form method="post" asp-action="Register" asp-controller="Account">
+<form class="form-group" method="post" asp-action="Register" asp-controller="Account">
 
     <fieldset>
         <legend> Provide User Information</legend>
