--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListByTag.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListByTag.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<form method="get" asp-action="DoListByTag" asp-controller="Images">
+<form class="form-group" method="get" asp-action="DoListByTag" asp-controller="Images">
 
     <fieldset>
         <legend>Choose a tag</legend>
