--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Query.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Query.cshtml
@@ -2,11 +2,10 @@
     ViewBag.Title = "Find an Image";
 }
 
-<
 
 <h2>@ViewBag.Title</h2>
 
-<form method="get" asp-action="Details" asp-controller="Images">
+<form class="form-group" method="get" asp-action="Details" asp-controller="Images">
 
     <fieldset>
         <legend>Enter Image Information</legend>
