--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Approve.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Approve.cshtml
@@ -7,7 +7,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<form method="post" asp-action="Approve" asp-controller="Images">
+<form class="form-group" method="post" asp-action="Approve" asp-controller="Images">
 
     <fieldset>
         <legend>Approve Images</legend>
