--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Delete.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<form method="post" asp-action="DoDelete" asp-controller="Images">
+<form class="form-group" method="post" asp-action="DoDelete" asp-controller="Images">
 
     <fieldset>
         <legend>Edit Image Information</legend>
@@ -16,7 +16,7 @@
         <input asp-for="Id" class="hidden" />
 
         <p>
-            <img src="@Model.Uri" />
+            <img class="img-thumbnail" src="@Model.Uri" />
         </p>
 
         <p>Image id: @Model.Id</p>
