--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/wwwroot/css/site_ADA.css
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/wwwroot/css/site_ADA.css
@@ -1,103 +1,80 @@
-﻿body 
-{
-    background: #666666;
-    margin: 0;
-    padding: 0;
-    color: #000000;
-    font-family: Verdana, Arial, Helvetica, Sans-Serif;
-    font-size: 300%;
+﻿body {
+    background: white !important;
+    color: #000000 !important;
+    font-family: Verdana, Arial, Helvetica, Sans-Serif !important;
+    font-size: 500% !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
-table th {
-    border-width: 1px;
-    padding: 8px;
-    border-style: solid;
-    border-color: #666666;
-    background-color: #dedede;
+.twoColumnHdrFtr #container {
+    background: #ffffff !important;
+    border: 1px solid #000000 !important;
+    margin: 0 auto !important;
+    max-width: 90vw !important;
+    min-height: 90vh !important;
+    overflow: hidden !important;
+    text-align: left !important;
 }
 
-table td {
-    border-width: 1px;
-    padding: 8px;
-    border-style: solid;
-    border-color: #666666;
-    background-color: #ffffff;
+.twoColumnHdrFtr #header {
+    background: #dddddd !important;
+    padding: 10px !important;
 }
 
-.twoColumnHdrFtr #container
-{
-    width: 780px;
-    margin: 0 auto;
-    background: #ffffff;
-    border: 1px solid #000000;
-    text-align: left;
+.twoColumnHdrFtr #header h1 {
+    margin: 0 !important;
+    text-align: center !important;
+    /* padding: 10px !important ; */
 }
 
-.twoColumnHdrFtr #header
-{
-    background: #dddddd;
-    padding: 10px;
-}
-.twoColumnHdrFtr #header h1
-{
-    text-align: center;
-    margin: 0;
-    /* padding: 10px; */
+.twoColumnHdrFtr #sidebar {
+    background: #ebebeb !important;
+    float: left !important;
+    font-family: "Trebuchet MS", Arial, Helvetica, Sans-Serif !important;
+    padding: 10px !important;
+    width: 30% !important;
 }
 
-.twoColumnHdrFtr #sidebar
-{
-    float: left;
-    width: 180px;
-    background: #ebebeb;
-    padding: 10px;
-    font-family: "Trebuchet MS", Arial, Helvetica, Sans-Serif;
-}
-.twoColumnHdrFtr #sidebar h1
-{
-    font-size: 100%;
+.twoColumnHdrFtr #sidebar h1 { font-size: 100% !important; }
+
+h2 { font-size: 100% !important; }
+
+legend { font-size: 50% !important; }
+
+#nav {
+    /* background:#c99 !important ; */
+    font-family: "Trebuchet MS", Arial, Helvetica, Sans-Serif !important;
+    font-size: 100% !important;
+    padding: 5px 10px !important;
 }
 
-#nav 
-{
-    padding:5px 10px;
-    /* background:#c99; */
-    font-family: "Trebuchet MS", Arial, Helvetica, Sans-Serif;
-    font-size: 80%;
-}
-#nav ul 
-{
-    margin:0;
-    padding:0;
-    list-style:none;
-}
-#nav li 
-{
-    display:inline;
-    margin:0;
-    padding:0 10px;
+#nav ul {
+    list-style: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
-.twoColumnHdrFtr #content
-{
-    float: right;
-    width: 560px;
-    padding: 10px;
-    font-family: "Trebuchet MS", Arial, Helvetica, Sans-Serif;
+#nav li {
+    display: inline !important;
+    margin: 0 !important;
+    padding: 0 10px !important;
 }
 
-.twoColumnHdrFtr #footer
-{
-    clear: both;
-    background: #dddddd;
-    padding: 10px;
+.twoColumnHdrFtr #content {
+    float: left !important;
+    font-family: "Trebuchet MS", Arial, Helvetica, Sans-Serif !important;
+    padding: 10px !important;
+    width: 70% !important;
 }
 
-.twoColumnHdrFtr #footer p
-{
-    padding: 10px;
-    margin: 0;
-    font-size: x-small;
-    color: #900;
-    text-align: center;
+.twoColumnHdrFtr #footer {
+    background-color: white !important;
+    border: 1px solid #000000 !important;
+    margin: 0 auto !important;
+    padding: 0 !important;
+    padding: 10px !important;
+    width: 90vw !important;
 }
+
+.twoColumnHdrFtr #footer p { font-size: x-small !important; }
