--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Manage.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Manage.cshtml
@@ -11,7 +11,7 @@
     <fieldset>
         <legend>Deactivate/Reactivate Users</legend>
 
-        <table class="gridTable">
+        <table class="table">
             <tr>
                 <th>Deactivate</th>
                 <th>User</th>
