--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Approve.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Approve.cshtml
@@ -12,7 +12,7 @@
     <fieldset>
         <legend>Approve Images</legend>
 
-        <table class="gridTable">
+        <table class="table">
             <tr>
                 <th>Image Caption</th>
                 <th>Approve</th>
