--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Details.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Details.cshtml
@@ -8,7 +8,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<p><img class="img-thumbnail" src="@Model.Uri" /></p>
+<p><img class="img-thumbnail" src="@Url.Content(Model.Uri)" /></p>
 
 <p>Image id: @Model.Id</p>
 
