--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Password.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Password.cshtml
@@ -31,6 +31,7 @@
     </fieldset>
 
     <p>@ViewBag.Message</p>
+    <p>@ViewBag.StatusMessage</p>
     <p><div class="text-danger" asp-validation-summary="All"></div></p>
 
 </form>
