--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Register.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Register.cshtml
@@ -31,6 +31,6 @@
     </fieldset>
 
     <p>@ViewBag.Message</p>
-    <p><div class="text-danger" asp-validation-summary="ModelOnly"></div></p>
+    <p><div class="text-danger" asp-validation-summary="All"></div></p>
 
 </form>
