--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ImageViews.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ImageViews.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<table class="gridTable">
+<table class="table">
     <tr>
         <th>Caption</th>
         <th>User</th>
