--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Home/Error.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Home/Error.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Error";
 }
 
-@model ImageSharingWithCloudStorage.Models.ErrorViewModel
+@model ErrorViewModel
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
