--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Details.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Details.cshtml
@@ -1,6 +1,4 @@
-﻿@using ImageSharingWithCloudStorage.Controllers
-
-@model ImageSharingWithCloudStorage.Models.ImageView
+﻿@model ImageView
 
 @{
     ViewBag.Title = "Image Details";
@@ -8,7 +6,9 @@
 
 <h2>@ViewBag.Title</h2>
 
-<p><img class="img-thumbnail" src="@Url.Content(Model.Uri)" /></p>
+<p>
+    <img class="img-thumbnail" src="@Url.Content(Model.Uri)"/>
+</p>
 
 <p>Image id: @Model.Id</p>
 
@@ -16,7 +16,7 @@
 
 <p>Caption: @Model.Caption</p>
 
-<p>Description: <br />@Model.Description</p>
+<p>Description: <br/>@Model.Description</p>
 
 <p>Date taken: @Model.DateTaken.ToShortDateString()</p>
 
