--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ImageViews.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ImageViews.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ImageSharingWithCloudStorage.Models.LogEntry>
+﻿@model IEnumerable<LogEntry>
 
 @{
     ViewBag.Title = "Image Viewing Activity";
