--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListAll.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ImageSharingWithCloudStorage.Models.Image>
+﻿@model IEnumerable<Image>
 
 @{
     ViewBag.Title = "All Images";
@@ -6,7 +6,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-<table class="table" >
+<table class="table">
     <tr>
         <th>Caption</th>
         <th>Uploader</th>
