--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListByUser.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/ListByUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImageSharingWithCloudStorage.Models.ListByUserModel
+﻿@model ListByUserModel
 
 @{
     ViewBag.Title = "List Images By User";
@@ -19,7 +19,7 @@
 
         </p>
         <p>
-            <input type="submit" value="List" />
+            <input type="submit" value="List"/>
         </p>
     </fieldset>
 
