--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Upload.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Upload.cshtml
@@ -1,4 +1,4 @@
-﻿@model ImageSharingWithCloudStorage.Models.ImageView
+﻿@model ImageView
 
 @{
     ViewBag.Title = "Upload an Image";
@@ -12,19 +12,20 @@
     <fieldset>
         <legend>Enter Image Information</legend>
         <p>
-            Caption: <input asp-for="Caption" />
+            Caption: <input asp-for="Caption"/>
             <br/>
             <span class="text-danger" asp-validation-for="Caption"></span>
         </p>
-        <p>Select a tag: 
+        <p>
+            Select a tag:
             <select asp-for="TagId" asp-items="Model.Tags">
                 <option disabled selected value="">Select a tag</option>
             </select>
-            <br />
+            <br/>
             <span class="text-danger" asp-validation-for="TagId"></span>
         </p>
         <p>
-            Description:<br />
+            Description:<br/>
             <textarea asp-for="Description" cols="40" rows="5">
                 Enter description here.
             </textarea>
@@ -33,7 +34,7 @@
 
         </p>
         <p>
-            Date taken: <input asp-for="DateTaken" /><span asp-validation-for="DateTaken" />
+            Date taken: <input asp-for="DateTaken"/><span asp-validation-for="DateTaken"/>
             <br/>
             <span class="text-danger" asp-validation-for="DateTaken"></span>
         </p>
@@ -47,7 +48,7 @@
 
         </p>
         <p>
-            <input type="submit" value="Upload" />
+            <input type="submit" value="Upload"/>
         </p>
     </fieldset>
 
