--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Password.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Password.cshtml
@@ -4,7 +4,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-@model ImageSharingWithCloudStorage.Models.LocalPasswordModel
+@model LocalPasswordModel
 
 <form class="form-group" method="post" asp-action="Password" asp-controller="Account">
 
@@ -12,26 +12,28 @@
         <legend>Update Your Password</legend>
         <p>
             <label asp-for="OldPassword">Old Password: </label>
-            <input asp-for="OldPassword" />
-            <span asp-validation-for="OldPassword" />
+            <input asp-for="OldPassword"/>
+            <span asp-validation-for="OldPassword"/>
         </p>
         <p>
             <label asp-for="NewPassword">New Password:</label>
-            <input asp-for="NewPassword" />
-            <span asp-validation-for="NewPassword" />
+            <input asp-for="NewPassword"/>
+            <span asp-validation-for="NewPassword"/>
         </p>
         <p>
             <label asp-for="ConfirmPassword">Confirm Password:</label>
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword" />
+            <input asp-for="ConfirmPassword"/>
+            <span asp-validation-for="ConfirmPassword"/>
         </p>
         <p>
-            <input type="submit" value="Update" />
+            <input type="submit" value="Update"/>
         </p>
     </fieldset>
 
     <p>@ViewBag.Message</p>
     <p>@ViewBag.StatusMessage</p>
-    <p><div class="text-danger" asp-validation-summary="All"></div></p>
+    <p>
+        <div class="text-danger" asp-validation-summary="All"></div>
+    </p>
 
 </form>
