--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Register.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-@model ImageSharingWithCloudStorage.Models.RegisterModel
+@model RegisterModel
 
 <form class="form-group" method="post" asp-action="Register" asp-controller="Account">
 
@@ -12,25 +12,27 @@
         <legend> Provide User Information</legend>
         <p>
             Email:
-            <input asp-for="Email" /><span asp-validation-for="Email" />
+            <input asp-for="Email"/><span asp-validation-for="Email"/>
         </p>
         <p>
-            Password: <input asp-for="Password" /><span asp-validation-for="Password" />
+            Password: <input asp-for="Password"/><span asp-validation-for="Password"/>
         </p>
         <p>
-            Confirm: <input asp-for="ConfirmPassword" /><span asp-validation-for="ConfirmPassword" />
+            Confirm: <input asp-for="ConfirmPassword"/><span asp-validation-for="ConfirmPassword"/>
         </p>
         <p>
             Visually impaired?
-            <input asp-for="ADA" /><span asp-validation-for="ADA" />
+            <input asp-for="ADA"/><span asp-validation-for="ADA"/>
         </p>
         <p>
-            <input type="submit" value="Register" />
+            <input type="submit" value="Register"/>
 
         </p>
     </fieldset>
 
     <p>@ViewBag.Message</p>
-    <p><div class="text-danger" asp-validation-summary="All"></div></p>
+    <p>
+        <div class="text-danger" asp-validation-summary="All"></div>
+    </p>
 
 </form>
