--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Delete.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Delete.cshtml
@@ -13,10 +13,10 @@
     <fieldset>
         <legend>Edit Image Information</legend>
 
-        <input asp-for="Id" class="hidden" />
+        <input asp-for="Id" class="hidden"/>
 
         <p>
-            <img class="img-thumbnail" src="@Model.Uri" />
+            <img class="img-thumbnail" src="@Model.Uri"/>
         </p>
 
         <p>Image id: @Model.Id</p>
@@ -27,7 +27,7 @@
 
         <p>
             Description:
-            <br />@Model.Description
+            <br/>@Model.Description
         </p>
 
         <p>Date taken: @Model.DateTaken.ToShortDateString()</p>
@@ -35,11 +35,13 @@
         <p>Uploader: @Model.Username</p>
 
         <p>
-            <input type="submit" value="Confirm Delete" />
+            <input type="submit" value="Confirm Delete"/>
         </p>
     </fieldset>
 
     <p>@ViewBag.Message</p>
-    <p><div class="text-danger" asp-validation-summary="ModelOnly"></div></p>
+    <p>
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+    </p>
 
 </form>
