--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Edit.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Images/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@using ImageSharingWithCloudStorage.Controllers
-
-@model ImageSharingWithCloudStorage.Models.ImageView
+﻿@model ImageView
 
 @{
     ViewBag.Title = "Edit Image";
@@ -16,25 +14,26 @@
         <input type="hidden" asp-for="Id"/>
 
         <p>
-            <img class="img-thumbnail" src="@Model.Uri" />
+            <img class="img-thumbnail" src="@Model.Uri"/>
         </p>
 
         <p>Image id: @Model.Id</p>
 
         <p>
-            Caption: <input asp-for="Caption" />
+            Caption: <input asp-for="Caption"/>
             <br/>
             <span class="text-danger" asp-validation-for="Caption"></span>
         </p>
-        <p>Select a tag: 
+        <p>
+            Select a tag:
             <select asp-for="TagId" asp-items="Model.Tags">
                 <option disabled selected value="">Select a tag</option>
             </select>
-            <br />
+            <br/>
             <span class="text-danger" asp-validation-for="TagId"></span>
         </p>
         <p>
-            Description:<br />
+            Description:<br/>
             <textarea asp-for="Description" cols="40" rows="5">Enter description here.</textarea>
             <br/>
             <span class="text-danger" asp-validation-for="Description"></span>
@@ -48,11 +47,13 @@
             <span class="text-danger" asp-validation-for="DateTaken"></span>
         </p>
         <p>
-            <input type="submit" value="Submit Changes" />
+            <input type="submit" value="Submit Changes"/>
         </p>
     </fieldset>
 
     <p>@ViewBag.Message</p>
-    <p><div class="text-danger" asp-validation-summary="All"></div></p>
+    <p>
+        <div class="text-danger" asp-validation-summary="All"></div>
+    </p>
 
 </form>
