--- a/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Shared/Layout.cshtml
+++ b/SANJEET_VINOD_JAIN/ImageSharingWithCloudStorage/Views/Shared/Layout.cshtml
@@ -2,9 +2,9 @@
 
 <html lang="en">
 <head id="head">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
     <title> @ViewBag.Title </title>
 
@@ -12,89 +12,111 @@
         var SiteCss = ViewBag.isADA ? "site_ADA.css" : "site.css";
     }
 
-    <link rel="stylesheet" href="~/css/@SiteCss" type="text/css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/@SiteCss" type="text/css" asp-append-version="true"/>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/>
     </environment>
 
 </head>
 
 <body class="twoColumnHdrFtr">
-    <div id="container">
-        <header id="header">
-            <h1>
-                <img class="img-thumbnail img-fluid" alt="[Home Page Banner]" src="~/images/main-banner-3.png" />
-            </h1>
-        </header>
+<div id="container">
+    <header id="header">
+        <h1>
+            <img class="img-thumbnail img-fluid" alt="[Home Page Banner]" src="~/images/main-banner-3.png"/>
+        </h1>
+    </header>
 
-        <nav id="nav">
-            <ul>
-                <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Password">Password</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Manage">Users</a></li>
-                <li><a asp-area="" asp-controller="Images" asp-action="Upload">Upload</a></li>
-                <li><a asp-area="" asp-controller="Images" asp-action="ListAll">List All</a></li>
-                <li><a asp-area="" asp-controller="Images" asp-action="ListByUser">List by User</a></li>
-                <li><a asp-area="" asp-controller="Images" asp-action="ListByTag">List by Tag</a></li>
-                <!-- <li><a asp-area="" asp-controller="Images" asp-action="Query">Query</a></li> -->
-                <li><a asp-area="" asp-controller="Images" asp-action="Approve">Approve</a></li>
-                <li><a asp-area="" asp-controller="Images" asp-action="ImageViews">Image Views</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Logoff">Logoff</a></li>
-            </ul>
-        </nav>
+    <nav id="nav">
+        <ul>
+            <li>
+                <a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Account" asp-action="Password">Password</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Account" asp-action="Manage">Users</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Images" asp-action="Upload">Upload</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Images" asp-action="ListAll">List All</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Images" asp-action="ListByUser">List by User</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Images" asp-action="ListByTag">List by Tag</a>
+            </li>
+            <!-- <li><a asp-area="" asp-controller="Images" asp-action="Query">Query</a></li> -->
+            <li>
+                <a asp-area="" asp-controller="Images" asp-action="Approve">Approve</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Images" asp-action="ImageViews">Image Views</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Account" asp-action="Logoff">Logoff</a>
+            </li>
+        </ul>
+    </nav>
 
-        <aside id="sidebar">
-            <h1>Links</h1>
-            <p>
-                <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-            </p>
-            <p>
-                <a href="https://sanjeet-jain.github.io/">My home page</a>
-            </p>
-            <p>
-                <a href="http://www.stevens.edu">Stevens home page</a>
-            </p>
-        </aside>
+    <aside id="sidebar">
+        <h1>Links</h1>
+        <p>
+            <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        </p>
+        <p>
+            <a href="https://sanjeet-jain.github.io/">My home page</a>
+        </p>
+        <p>
+            <a href="http://www.stevens.edu">Stevens home page</a>
+        </p>
+    </aside>
 
 
-        <partial name="_CookieConsentPartial" />
+    <partial name="_CookieConsentPartial"/>
 
-        <article id="content">
-            @RenderBody()
-        </article>
-    </div>
-    <footer id="footer" class="fixed-bottom text-center text-muted">
-        <p c> &copy; @DateTime.Now.Year SITE MAINTAINED BY <a href="https://sanjeet-jain.github.io/">SANJEET JAIN</a></p>
-    </footer>
+    <article id="content">
+        @RenderBody()
+    </article>
+</div>
+<footer id="footer" class="fixed-bottom text-center text-muted">
+    <p c> &copy; @DateTime.Now.Year SITE MAINTAINED BY <a href="https://sanjeet-jain.github.io/">SANJEET JAIN</a></p>
+</footer>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+<environment include="Development">
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</environment>
+<environment exclude="Development">
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+            asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+            asp-fallback-test="window.jQuery"
+            crossorigin="anonymous"
+            integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
         </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+            asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+            crossorigin="anonymous"
+            integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
         </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+</environment>
 
-    @RenderSection("Scripts", required: false)
+@RenderSection("Scripts", false)
 </body>
 </html>
